# PluginTask

./: CMakeLists.txt  CSV.cpp  CSV.h  File_operations.cpp  File_operations.h  JSON.cpp  JSON.h  README.md  Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  UI.cpp  UI.h  XML.cpp  XML.h  main.cpp
